<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/my_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/my_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/my_picture" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_picture"
            android:layout_centerHorizontal="true"
            android:fontFamily="casual"
            android:text="@string/my_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/my_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/name"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/my_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_view"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/my_track"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/my_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_track"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/my_country"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/my_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_country"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/my_email_address"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cell_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_mail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/my_phone_number"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/my_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cell_phone_number"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:text="@string/slack_user_name"
            android:textSize="24sp" />
    </RelativeLayout>
</ScrollView>
