<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_text"
            android:textColor="#000000"
            android:textSize="32sp" />

        <Button
            android:id="@+id/button_one"
            style="@style/MyOwnStyle"
            android:layout_below="@id/welcome"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="64dp"
            android:onClick="buttonOneClicked"
            android:text="@string/first_button_text" />

        <Button
            android:id="@+id/button_two"
            style="@style/MyOwnStyle"
            android:layout_below="@id/button_one"
            android:onClick="buttonTwoClicked"
            android:text="@string/second_button_text" />
    </RelativeLayout>
</ScrollView>